syntax = "proto3";

option go_package = "amusingx.fit/amusingx/protos/pangu/service/pangu/proto";

package panguservice;

import "pangu/proto/sub_product.proto";

message SubProductUpdateRequest {
  int64  id = 1;
  string name = 2;
  string desc = 3;
  int64 product_id = 4;
  string currency = 5;
  int64 price = 6;
  int64 stock = 7;
  repeated int64 attribute_id = 8;
  repeated Picture pictures = 9;
  int64 real_inventory = 10;
  int64 available_inventory = 11;
}